[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
indent-width = 4
extend-exclude = ["docs"]

target-version = "py312"

[tool.ruff.lint]
select = ["I"]
ignore = ["F"]

fixable = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
incremental = true
warn_redundant_casts = true
disallow_subclassing_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
disallow_any_decorated = true
disallow_untyped_decorators = true
strict_optional = true
disallow_any_unimported = true
# disallow_any_generics = true
