[metadata]
description-file = README.md

[aliases]
test = pytest

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 88
;max-complexity = 18
select = B,C,E,F,W,T4,B9

[isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_first_party=aiohttp_swagger3

[mypy]
incremental = true
warn_redundant_casts = true
disallow_subclassing_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
disallow_any_decorated = true
disallow_untyped_decorators = true
strict_optional = true
disallow_any_unimported = true
;disallow_any_generics = true
